# WutheringWavesAssistant

./: .gitignore  CHANGELOG.md  README.md  WWA一键更新.bat  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: alpha.yml  release.yml  sync_to_cnb.yml
docs/: ARCH.md  COMBAT_SYSTEM.md  CONFIG.md  CONTRIBUTING_COMBO.md  ISSUES.md  README.md  code_review_mornye_shorekeeper.md
docs/resonators/: camellya.md  cantarella.md  cartethyia.md  changli.md  ciaccona.md  encore.md  generic.md  jinhsi.md  lynae.md  mornye.md  phoebe.md  phrolova.md  rover.md  sanhua.md  shorekeeper.md  verina.md
scripts/: rebuild_conda_env.ps1
src/: __init__.py  application.py
src/c/: README.md
src/c/launcher/: launcher.md  wwa.c  wwa.rc  wwa.res
src/c/updater/: updater.c  updater.rc  updater.res
src/config/: app_config.py  config.py  echo_config.py  gui_config.py  logging_config.py
src/controller/: main_controller.py
src/core/: boss.py  constants.py  contexts.py  environs.py  exceptions.py  injector.py  interface.py  regions.py  tasks.py
src/core/combat/: combat_core.py  combat_system.py
src/core/combat/resonator/: Changli.py  Jinhsi.py  Shorekeeper.py  camellya.py  cantarella.py  cartethyia.py  changli.py  ciaccona.py  encore.py  generic.py  jinhsi.py  lynae.py  mornye.py  phoebe.py  phrolova.py  rover.py  sanhua.py  shorekeeper.py  verina.py
src/gui/: gui.py
src/gui/common/: config.py  globals.py  icon.py  signal_bus.py  style_sheet.py  version_control.py
src/gui/components/: sample_card.py
src/gui/resource/: resource.qrc
src/gui/resource/qss/dark/: gallery_interface.qss  home_interface.qss  param_interface.qss  sample_card.qss  setting_interface.qss
src/gui/resource/qss/light/: gallery_interface.qss  home_interface.qss  param_interface.qss
src/gui/view/: gallery_interface.py  home_interface.py  main_window.py  notice_interface.py  param_interface.py  setting_interface.py  terminal_interface.py
src/service/: auto_boss_service.py  auto_pickup_service.py  auto_story_service.py  boss_info_service.py  control_service.py  daily_activity_service.py  img_service.py  ocr_service.py  page_event_service.py  window_service.py
src/util/: file_util.py  hwnd_util.py  keymouse_util.py  paddleocr_util.py  rapidocr_util.py  uac_util.py  windows_util.py  winreg_util.py  yolo_util.py
tests/: conftest.py
tests/config/: logging_config_test.py
tests/core/: combat_core_test.py  combats_record.py  combats_test.py
tests/service/: control_service_test.py  page_event_service_test.py
tests/util/: audio_util_test.py  file_util_test.py  hwnd_util_test.py  img_util_test.py  keymouse_util_test.py  mss_util_test.py  paddleocr_util_test.py  rapidocr_util_test.py  screenshot_util_test.py  windows_util_test.py  winreg_util_test.py  yolo_util_test.py
