[project]
name = "wuthering-waves-assistant"
version = "3.0"
description = "Wuthering Waves Assistant"
authors = [
    { name = "wakening", email = "MzUwODA3OTg5Mw==@qq.com" }
]
license = { text = "AGPL-3.0" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy (==1.26.4)",
    "opencv-python (>=4.11.0.0)",
    "rapidocr (==3.5.0)",
    "onnxruntime (==1.20.0) ; extra != 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra == 'cpu' ",
    "onnxruntime-directml (==1.20.0) ; extra != 'cu126' and extra != 'cu129' and extra != 'cu118' and extra == 'dml' and extra != 'cpu' ",
    "onnxruntime-gpu (==1.20.0) ; extra == 'cu129' and extra != 'cu126' and extra != 'cu118' and extra != 'dml' and extra != 'cpu' ",
    "onnxruntime-gpu (==1.20.0) ; extra == 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra != 'cpu' ",
    "onnxruntime-gpu (==1.20.0) ; extra == 'cu118' and extra != 'cu129' and extra != 'cu126' and extra != 'dml' and extra != 'cpu' ",
    "pyside6-fluent-widgets[full] (==1.7.6)",
    "pyside6 (>=6.8.0,<7.0.0)",
    "dependency-injector (>=4.45.0,<5.0.0)",
    "mss (>=10.0.0)",
    "pywin32 (>=308)",
    "pynput",
    "pydirectinput",
    "pillow",
    "pydantic",
    "psutil (>=7.0.0,<8.0.0)",
    "colorlog",
    "pycaw (==20240210)",
    "gputil",
    "omegaconf",
] # https://python-poetry.org/docs/dependency-specification/#extra-environment-marker


[project.optional-dependencies]
cu129 = [
    "paddlepaddle-gpu (==3.2.2)",
    "onnxruntime-gpu (==1.20.0)",
    "nvidia-cublas-cu12 (==12.9.0.13)",
    "nvidia-cuda-runtime-cu12 (==12.9.37)",
    "nvidia-cudnn-cu12 (==9.9.0.52)",
    "nvidia-cufft-cu12 (==11.4.0.6)",
    "nvidia-curand-cu12 (==10.3.10.19)",
    "nvidia-cusolver-cu12 (==11.7.4.40)",
    "nvidia-cusparse-cu12 (==12.5.9.5)",
    "nvidia-nvjitlink-cu12 (==12.9.41)",
]
cu126 = [
    "paddlepaddle-gpu (==3.2.2)",
    "onnxruntime-gpu (==1.20.0)",
    "nvidia-cublas-cu12 (==12.6.4.1)",
    "nvidia-cuda-runtime-cu12 (==12.6.77)",
    "nvidia-cudnn-cu12 (==9.5.1.17)",
    "nvidia-cufft-cu12 (==11.3.0.4)",
    "nvidia-curand-cu12 (==10.3.7.77)",
    "nvidia-cusolver-cu12 (==11.7.1.2)",
    "nvidia-cusparse-cu12 (==12.5.4.2)",
    "nvidia-nvjitlink-cu12 (==12.6.85)",
]
cu118 = [
    "paddlepaddle-gpu (==3.2.2)",
    "onnxruntime-gpu (==1.20.0)",
    "nvidia-cublas-cu11 (==11.11.3.6)",
    "nvidia-cuda-nvrtc-cu11 (==11.8.89)",
    "nvidia-cuda-runtime-cu11 (==11.8.89)",
    "nvidia-cudnn-cu11 (==8.9.6.50)",
    "nvidia-cufft-cu11 (==10.9.0.58)",
    "nvidia-curand-cu11 (==10.3.0.86)",
    "nvidia-cusolver-cu11 (==11.4.1.48)",
    "nvidia-cusparse-cu11 (==11.7.5.86)",
]
dml = [
    "onnxruntime-directml (==1.20.0)",
]
cpu = [
    "onnxruntime (==1.20.0)",
]
paddleocr = [
    "paddleocr (==3.3.2)",
]
dev = [
    "pytest",
    "matplotlib",
    "python-dotenv",
]


[tool.poetry.dependencies]
onnxruntime = [
    { markers = "extra != 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra == 'cpu'" },
]
onnxruntime-directml = [
    { markers = "extra != 'cu126' and extra != 'cu129' and extra != 'cu118' and extra == 'dml' and extra != 'cpu'"},
]
onnxruntime-gpu = [
    { markers = "extra == 'cu129' and extra != 'cu126' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'"},
    { markers = "extra == 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'"},
    { markers = "extra == 'cu118' and extra != 'cu126' and extra != 'cu129' and extra != 'dml' and extra != 'cpu'", source = "onnxruntime-cu118"},
]
paddlepaddle-gpu = [
    { markers = "extra == 'cu129' and extra != 'cu126' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu129"},
    { markers = "extra == 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu126"},
    { markers = "extra == 'cu118' and extra != 'cu126' and extra != 'cu129' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu118"},
]
# cuda12
nvidia-cublas-cu12 = [
    { markers = "extra == 'cu129' and extra != 'cu126' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu129"},
    { markers = "extra == 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu126"},
]
nvidia-cuda-runtime-cu12 = [
    { markers = "extra == 'cu129' and extra != 'cu126' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu129"},
    { markers = "extra == 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu126"},
]
nvidia-cudnn-cu12 = [
    { markers = "extra == 'cu129' and extra != 'cu126' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu129"},
    { markers = "extra == 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu126"},
]
nvidia-cufft-cu12 = [
    { markers = "extra == 'cu129' and extra != 'cu126' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu129"},
    { markers = "extra == 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu126"},
]
nvidia-curand-cu12 = [
    { markers = "extra == 'cu129' and extra != 'cu126' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu129"},
    { markers = "extra == 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu126"},
]
nvidia-cusolver-cu12 = [
    { markers = "extra == 'cu129' and extra != 'cu126' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu129"},
    { markers = "extra == 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu126"},
]
nvidia-cusparse-cu12 = [
    { markers = "extra == 'cu129' and extra != 'cu126' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu129"},
    { markers = "extra == 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu126"},
]
nvidia-nvjitlink-cu12 = [
    { markers = "extra == 'cu129' and extra != 'cu126' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "nvidia"},
    { markers = "extra == 'cu126' and extra != 'cu129' and extra != 'cu118' and extra != 'dml' and extra != 'cpu'", source = "nvidia"},
]
# cu118
nvidia-cublas-cu11 = [
    { markers = "extra == 'cu118' and extra != 'cu126' and extra != 'cu129' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu118"},
]
nvidia-cuda-nvrtc-cu11 = [
    { markers = "extra == 'cu118' and extra != 'cu126' and extra != 'cu129' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu118"},
]
nvidia-cuda-runtime-cu11 = [
    { markers = "extra == 'cu118' and extra != 'cu126' and extra != 'cu129' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu118"},
]
nvidia-cudnn-cu11 = [
    { markers = "extra == 'cu118' and extra != 'cu126' and extra != 'cu129' and extra != 'dml' and extra != 'cpu'", source = "nvidia"},
]
nvidia-cufft-cu11 = [
    { markers = "extra == 'cu118' and extra != 'cu126' and extra != 'cu129' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu118"},
]
nvidia-curand-cu11 = [
    { markers = "extra == 'cu118' and extra != 'cu126' and extra != 'cu129' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu118"},
]
nvidia-cusolver-cu11 = [
    { markers = "extra == 'cu118' and extra != 'cu126' and extra != 'cu129' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu118"},
]
nvidia-cusparse-cu11 = [
    { markers = "extra == 'cu118' and extra != 'cu126' and extra != 'cu129' and extra != 'dml' and extra != 'cpu'", source = "paddlepaddle-cu118"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"


[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
priority = "supplemental"


[[tool.poetry.source]]
name = "nvidia-ngc"
url = "https://pypi.ngc.nvidia.com"
priority = "supplemental"


[[tool.poetry.source]]
name = "paddlepaddle-cu129"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu129/"
priority = "explicit"


[[tool.poetry.source]]
name = "paddlepaddle-cu126"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
priority = "explicit"


[[tool.poetry.source]]
name = "paddlepaddle-cu120"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu120/"
priority = "explicit"


[[tool.poetry.source]]
name = "paddlepaddle-cu118"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
priority = "explicit"


[[tool.poetry.source]]
name = "onnxruntime-cu120"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
priority = "explicit"


[[tool.poetry.source]]
name = "onnxruntime-cu118"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-11/pypi/simple/"
priority = "explicit"


[tool.mypy]
ignore_missing_imports = true # 忽略未安装类型标注的库
exclude = "tests/.*"
